Fix the spacing of the articles

--- a/_sass/components/_container.scss
+++ b/_sass/components/_container.scss
@@ -1,17 +1,14 @@
 /* Container */
 
 .container {
-    margin: 0 auto 0 calc(50% - 3em);
     max-width: 100%;
     width: 50%;
 
     @include breakpoint('<=wide') {
-        margin: 0 auto;
         width: 75%;
     }
 
     @include breakpoint('<=normal') {
-        margin: 0 auto;
         width: 95%;
     }
 }
